--- a/index.html
+++ b/index.html
@@ -17,26 +17,28 @@
     <nav>
         <ul>
             <li><a href="index.html">Home</a></li>
-            <li><a href="pagina1.html">Página 1</a></li>
-            <li><a href="pagina2.html">Página 2</a></li>
+            <li><a href="pagina1.html">Lista de Funcionarios</a></li>
+            <li><a href="pagina2.html">Descripción de Servicios</a></li>
         </ul>
     </nav>
     <main>
         <section id="inicio">
-            <h2>Inicio</h2>
-            <p>Esta es una página de ejemplo creada con HTML y CSS.</p>
+            <h2 align = "center">Inicio</h2>
+            <p>Bienvenidos a nuestro servicio integral de cuidado y mantenimiento del hogar. Aquí encontrarás una variedad de servicios profesionales diseñados para mejorar la comodidad, seguridad y apariencia de tu espacio. Nos especializamos en brindar soluciones de calidad que cubren cada rincón de tu hogar, desde el mantenimiento de áreas interiores hasta el embellecimiento de exteriores.
         </section>
         <section id="pagina1.html">
-            <h2>pagina1</h2>
-            <p>Aquí se mostrará la tabla de productos</p>
+            <h2 align = "center">Lista de funcionarios</h2>
+            <p>Aquí podras conocer mas acerca de los profesionales encargados de cada area, asegurandote esa seguridad y tranquilidad de recibir a estos excelentes profesionales.</p>
         </section>
         <section id="pagina1.html">
-            <h2>pagina2</h2>
-            <p>hablar sobre pagina 2</p>
+            <h2 align = "center">Descripcion de servicios</h2>
+            <p>Nuestro equipo ofrece servicios de limpieza profunda para dejar cada espacio impecable y libre de suciedad; plomería experta para resolver problemas de tuberías o instalaciones sanitarias; y mantenimiento eléctrico que asegura el correcto funcionamiento de los sistemas eléctricos de tu hogar. También proporcionamos servicios de jardinería, cuidando y diseñando el paisaje exterior para darle una nueva vida a tus espacios verdes, y pintura de interiores, transformando tus habitaciones con colores frescos y acabados profesionales. <br>
+                <br>
+                Con nosotros, puedes estar seguro de que cada detalle de tu hogar recibirá la atención que merece.</p></p>
         </section>
     </main>
     <footer>
-        <p>&copy; Derechos reservado por Benito - Asunción - 2024</p>
+        <p>&copy; Derechos reservado por Enzo Coronel - Ñemby - 2024</p>
     </footer>
 </body>
 
