--- a/pagina1.html
+++ b/pagina1.html
@@ -5,54 +5,76 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página con Tabla</title>
+    <title>Lista de Funcionarios</title>
     <link rel="stylesheet" href="estilos/estilo_tabla.css">
 </head>
 
 <body>
     <header>
-        <h1>Ejemplo de Tabla</h1>
+        <h1>Aquí puedes ver la lista de funcionarios</h1>
     </header>
         <nav>
             <ul class="navbar">
-                <li><a href="index.html">inicio</a></li>
-                <li><a href="pagina1.html">Página 1</a></li>
-                <li><a href="pagina2.html">Página 2</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="pagina1.html">Lista de Funcionarios</a></li>
+                <li><a href="pagina2.html">Descripción de Servicios</a></li>
             </ul>
         </nav>
     <main>
         <section>
-            <h2>Datos de ejemplo</h2>
+            <h2 align = "center">Funcionarios</h2>
             <table>
                 <thead>
                     <tr>
                         <th>Nombre</th>
                         <th>Edad</th>
                         <th>Ciudad</th>
+                        <th>Ocupación</th>
+                        <th>Antiguedad</th>
                     </tr>
                 </thead>
                 <tbody>
                     <tr>
-                        <td>Juan Pérez</td>
+                        <td>Danniel Suarez</td>
                         <td>28</td>
-                        <td>Madrid</td>
+                        <td>Asunción</td>
+                        <td>Plomería y Reparaciones de Tuberías</td>
+                        <td>5 años</td>
                     </tr>
                     <tr>
-                        <td>María Gómez</td>
-                        <td>34</td>
-                        <td>Barcelona</td>
+                        <td>Jackeline Alcaráz</td>
+                        <td>25</td>
+                        <td>San Lorenzo</td>
+                        <td>Limpieza Profunda y Regular</td>
+                        <td>3 años</td>
                     </tr>
                     <tr>
-                        <td>Carlos López</td>
+                        <td>Diego Duarte</td>
                         <td>41</td>
-                        <td>Valencia</td>
+                        <td>Lambare</td>
+                        <td>Electricidad y Mantenimiento Eléctrico</td>
+                        <td>15 años</td>
+                    </tr>
+                    <tr>
+                        <td>Rocio Acosta</td>
+                        <td>32</td>
+                        <td>Luque</td>
+                        <td>Pintura y Remodelación de Interiores</td>
+                        <td>8 años</td>
+                    </tr>
+                    <tr>
+                        <td>Ricardo Pucheta</td>
+                        <td>35</td>
+                        <td>Altos</td>
+                        <td>Jardinería y Paisajismo</td>
+                        <td>12 años</td>
                     </tr>
                 </tbody>
             </table>
         </section>
     </main>
     <footer>
-        <p>&copy; Derechos de autor.</p>
+        <p>&copy; Derechos reservado por Enzo Coronel - Ñemby - 2024</p>
     </footer>
 </body>
 
