--- a/pagina1.html
+++ b/pagina1.html
@@ -63,7 +63,7 @@
                         <td>8 años</td>
                     </tr>
                     <tr>
-                        <td>Ricardo Pucheta</td>
+                        <td>Ricardo Wash</td>
                         <td>35</td>
                         <td>Altos</td>
                         <td>Jardinería y Paisajismo</td>
