--- a/pagina2.html
+++ b/pagina2.html
@@ -5,40 +5,52 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible=" IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Galería de Imágenes</title>
+    <title>Descripción de Servicios</title>
     <link rel="stylesheet" href="estilos/estilo_galeria.css">
 </head>
 
 <body>
     <header>
-        <h1>Galería de Imágenes</h1>
+        <h1>Descripción de Servicios</h1>
     </header>
     <nav>
         <ul class="navbar">
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="pagina1.html">Página 1</a></li>
-            <li><a href="pagina2.html">Página 2</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="pagina1.html">Lista de Funcionarios</a></li>
+            <li><a href="pagina2.html">Descripción de Servcios</a></li>
         </ul>
     </nav>
     <main>
         <section class="galeria">
             <div class="imagen">
-                <img src="imagenes/tecno1.jpg" alt="Descripción de la imagen 1">
-                Esto es un comentario sobre la imagen que se muestra aquí
+                <p align = "center">Danniel Suarez - Plomería y Reparaciones de Tuberías</p>
+                <img src="imagenes/imagen1.png" alt="Descripción de la imagen 1">
+                <p align = "center">Servicios de plomería para reparar fugas, instalaciones de lavamanos, inodoros, y mantenimiento de calentadores de agua. Estos servicios son esenciales para evitar daños por agua y mantener el sistema de tuberías en buen estado.</p>
             </div>
             <div class="imagen">
-                <img src="imagenes/tecno2.jpg" alt="Descripción de la imagen 2">
+                <p align = "center">Jackeline Alcaráz - Limpieza Profunda y Regular</p>
+                <img src="imagenes/image2.png" alt="Descripción de la imagen 2">
+                <p align = "center">Servicios de limpieza general, que pueden incluir la desinfección de baños, limpieza de cocina, aspirado de alfombras, y limpieza de ventanas. La limpieza profunda es excelente para hogares que necesitan mantenimiento en áreas difíciles de alcanzar o que requieren una limpieza más detallada.</p>
             </div>
             <div class="imagen">
-                <img src="imagenes/tecno3.jpg" alt="Descripción de la imagen 3">
+                <p align = "center">Diego Duarte - Electricidad y Mantenimiento Eléctrico</p>
+                <img src="imagenes/imagen3.png" alt="Descripción de la imagen 3">
+                <p align = "center">Instalación de enchufes, reparación de interruptores, mantenimiento de instalaciones eléctricas, y revisión de sistemas de iluminación. Estos trabajos ayudan a asegurar que el hogar sea seguro y que los sistemas eléctricos funcionen correctamente.</p>
             </div>
             <div class="imagen">
-                <img src="imagenes/tecno4.jpg" alt="Descripción de la imagen 4">
+                <p align = "center">Rocio Acosta - Pintura y Remodelación de Interiores</p>
+                <img src="imagenes/imagen4.png" alt="Descripción de la imagen 4">
+                <p align = "center">Servicios de pintura de paredes, techos y puertas, así como pequeñas remodelaciones o mejoras, como el reemplazo de azulejos o el trabajo con molduras decorativas. Son ideales para mantener el hogar fresco y con un estilo renovado.</p>
+            </div>
+            <div class="imagen">
+                <p align = "center">Ricardo Wash - Jardinería y Paisajismo</p>
+                <img src="imagenes/imagen5.png" alt="Descripción de la imagen 5">
+                <p align = "center">Servicios que incluyen el corte de césped, poda de arbustos, instalación de sistemas de riego, y diseño de jardines. Estos servicios ayudan a mejorar la estética exterior y el cuidado de áreas verdes en el hogar.</p>
             </div>
         </section>
     </main>
     <footer>
-        <p>&copy; Derechos de autor.</p>
+        <p>&copy; Derechos reservado por Enzo Coronel - Ñemby - 2024</p>
     </footer>
 </body>
 
