--- a/pagina1.html
+++ b/pagina1.html
@@ -26,10 +26,10 @@
             <table>
                 <thead>
                     <tr>
-                        <th>Nombre</th>
+                        <th>Nombre y Apellido</th>
                         <th>Edad</th>
                         <th>Ciudad</th>
-                        <th>Ocupación</th>
+                        <th>Ocupación - Sueldo</th>
                         <th>Antiguedad</th>
                     </tr>
                 </thead>
@@ -38,35 +38,35 @@
                         <td>Danniel Suarez</td>
                         <td>28</td>
                         <td>Asunción</td>
-                        <td>Plomería y Reparaciones de Tuberías</td>
+                        <td>Plomería y Reparaciones de Tuberías (4.500.000)</td>
                         <td>5 años</td>
                     </tr>
                     <tr>
                         <td>Jackeline Alcaráz</td>
                         <td>25</td>
                         <td>San Lorenzo</td>
-                        <td>Limpieza Profunda y Regular</td>
+                        <td>Limpieza Profunda y Regular (3.800.000)</td>
                         <td>3 años</td>
                     </tr>
                     <tr>
                         <td>Diego Duarte</td>
                         <td>41</td>
                         <td>Lambare</td>
-                        <td>Electricidad y Mantenimiento Eléctrico</td>
+                        <td>Electricidad y Mantenimiento Eléctrico (10.500.000)</td>
                         <td>15 años</td>
                     </tr>
                     <tr>
                         <td>Rocio Acosta</td>
                         <td>32</td>
                         <td>Luque</td>
-                        <td>Pintura y Remodelación de Interiores</td>
+                        <td>Pintura y Remodelación de Interiores (8.500.000)</td>
                         <td>8 años</td>
                     </tr>
                     <tr>
                         <td>Ricardo Wash</td>
                         <td>35</td>
                         <td>Altos</td>
-                        <td>Jardinería y Paisajismo</td>
+                        <td>Jardinería y Paisajismo (8.000.000)</td>
                         <td>12 años</td>
                     </tr>
                 </tbody>
